@@ -255,7 +255,7 @@ public class CommonPluginUtils {
 				Class<T> pluginCls = loadPluginClass(pluginLoader, 
 						plugin.getParameter(classParamName).valueAsString());
 				if (constructorSig == null) {
-					pluginObjs.add(pluginCls.newInstance());
+					pluginObjs.add(pluginCls.getDeclaredConstructor().newInstance());
 				} else {
 					pluginObjs.add(pluginCls.getConstructor(constructorSig).newInstance(constructorArgs));
 				}
@@ -499,7 +499,7 @@ public class CommonPluginUtils {
 					Class<T> pluginCls = loadPluginClass(pluginLoader, 
 							plugin.getParameter(classParamName).valueAsString());
 					if (constructorSig == null) {
-						return pluginCls.newInstance();
+						return pluginCls.getDeclaredConstructor().newInstance();
 					}
 					return pluginCls.getConstructor(constructorSig).newInstance(constructorArgs);
 				}
@@ -1055,7 +1055,7 @@ public class CommonPluginUtils {
 				if (createInstance) {
 					T pluginInstance = null;
 					if (constructorSig == null) {
-						pluginInstance = pluginCls.newInstance();
+						pluginInstance = pluginCls.getDeclaredConstructor().newInstance();
 					} else {
 						pluginInstance = pluginCls.getConstructor(constructorSig).newInstance(constructorArgs);
 					}
@@ -1280,7 +1280,7 @@ public class CommonPluginUtils {
 					if (createInstance) {
 						T pluginInstance = null;
 						if (constructorSig == null) {
-							pluginInstance = pluginCls.newInstance();
+							pluginInstance = pluginCls.getDeclaredConstructor().newInstance();
 						} else {
 							pluginInstance = pluginCls.getConstructor(constructorSig).newInstance(constructorArgs);
 						}
